<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.el3asas.ahmed_sheref_task.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_img" />

        <androidx.appcompat.widget.LinearLayoutCompat
            style="?attr/bottomSheetStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="-20dp"
            android:background="@drawable/login_card_bg"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_18sdp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#3C5A31"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/phone_num"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameInputLayout"
                style="@style/textInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableEnd="@drawable/ic_user"
                    android:drawablePadding="@dimen/_20sdp"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:text="@={viewModel.userName}"
                    android:textSize="@dimen/_14ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/password"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/textInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:boxStrokeWidth="0dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/password_toggle_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/edit_text_bg"
                    android:drawablePadding="@dimen/_20sdp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:text="@={viewModel.password}"
                    android:textSize="@dimen/_14ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/clickableCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:backgroundTint="@color/primaryColor"
                android:minHeight="@dimen/_45sdp"
                android:onClick="@{(v)->viewModel.loginUser(v,userNameInputLayout,passwordInputLayout)}"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:transitionName="login"
                android:visibility="@{viewModel.isLoading?View.GONE:View.VISIBLE}"
                app:cornerRadius="@dimen/_6sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="@{viewModel.isLoading?View.VISIBLE:View.GONE}">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/loading"
                    android:textColor="#872727" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/clickableCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="@{viewModel::onForgetPassClicked}"
                android:padding="@dimen/_8sdp"
                android:text="@string/forget_password"
                android:textColor="#AC4949" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>


</layout>